--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <body>
     <page class="goar__work">
       <div id="root"></div>
+      <div id="modal-root"></div>
     </page>
   </body>
 </html>
