--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>Burger React</title>
   </head>
   <body>
-    <page class="goar__work">
+    <page>
       <div id="root"></div>
       <div id="modal-root"></div>
     </page>
